--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,7 @@
     <string name="app_name">MadLevel4Example2</string>
     <string name="action_settings">Settings</string>
     <!-- Strings used for fragments for navigation -->
-    <string name="first_fragment_label">First Fragment</string>
-    <string name="second_fragment_label">Second Fragment</string>
+    <string name="home_fragment_label">Home Fragment</string>
     <string name="next">Next</string>
     <string name="previous">Previous</string>
 
@@ -13,7 +12,7 @@
     <string name="txt_instruction">Instructions: select rock, paper of scissors to play</string>
     <string name="txt_your_statistics">Your all time statistics</string>
     <string name="txt_you_win">You win!</string>
-    <string name="txt_vs" >V.S.</string>
+    <string name="txt_vs">V.S.</string>
     <string name="txt_win">Win: %d</string>
     <string name="txt_draw">Draw: %d</string>
     <string name="txt_loses">Lose: %d</string>
@@ -22,4 +21,7 @@
     <string name="title_win">YOU WIN!</string>
     <string name="title_lose">YOU LOSE!</string>
     <string name="title_draw">DRAW!!</string>
+
+    <string name="todo">TODO</string>
+    <string name="header_icon_btn">header_icon_btn</string>
 </resources>
