--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,6 +21,8 @@
     <string name="title_win">YOU WIN!</string>
     <string name="title_lose">YOU LOSE!</string>
     <string name="title_draw">DRAW!!</string>
+    <string name="title_fragment_history">Your Game History</string>
+
 
     <string name="todo">TODO</string>
     <string name="header_icon_btn">header_icon_btn</string>
